<resources>
    <string name="app_name">Venice Quiz</string>
    <string name="title_name">Do you know Venice?</string>
    <string name="subtitle">Test your Knowledge here!</string>
    <string name="q1">Question 1:</string>
    <string name="q2">Question 2:</string>
    <string name="q3">Question 3:</string>
    <string name="q4">Question 4:</string>
    <string name="q5">Question 5:</string>
    <string name="q6">Question 6:</string>
    <string name="question_one">The Carnevale of Venice dates back to what century?</string>
    <string name="question_one_answer_one">5th century</string>
    <string name="question_one_answer_two">9th century</string>
    <string name="question_one_answer_three">11th century</string>
    <string name="question_one_answer_four">17th century</string>
    <string name="question_two">Why are Venice\'s gondolas painted black?</string>
    <string name="question_two_answer_one">To prohibit competition for the fanciest boat</string>
    <string name="question_two_answer_two">To honor plague victims</string>
    <string name="question_two_answer_three">To protect the boats from the canal\'s corrosive salt</string>
    <string name="question_two_answer_four">To protect against an organism that eats wood</string>
    <string name="question_three">The famous Rialto Bridge was designed by Antonio Da Ponte.</string>
    <string name="answer_true">True</string>
    <string name="answer_false">False</string>
    <string name="question_four">Vivaldi, the well-known Venetian composer, was known as the Red Priest.</string>
    <string name="question_five">What is the name of saint of the famous Basilica?</string>
    <string name="question_five_hint">Write your answer here</string>
    <string name="question_six">The historic city is divided into six areas (pick 2 answers)</string>
    <string name="question_six_answer_one">Canareggio</string>
    <string name="question_six_answer_two">Torcello</string>
    <string name="question_six_answer_three">Murano</string>
    <string name="question_six_answer_four">Castello</string>
    <string name="score_button">Get your score</string>
    <string name="reset_button">Try again</string>
    <string name="toast0">None right. I can\'t even with you now! I\'m speechless!</string>
    <string name="toast1">SHAME! You only got %1$d correct. Try again why don\'t you!</string>
    <string name="toast2">Not too bad, you got %1$d correct answers. I know you can do better. </string>
    <string name="toast3">Great job! You got %1$d correct answers. I declare you love Venice!</string>
    <string name="end_sanmarco_image">End Saint Mark image</string>
    <string name="venice_sunset">Opening venice sunset</string>
</resources>
